[package]
name = "rsauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
hex = "0.4.3"
byteorder = "1.4.3"

[profile.release]
# Optimize executable size
lto = true
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
