[package]
name = "rsauth"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.20"
hex = "0.4.3"
byteorder = "1.4.3"
thiserror = "1.0"
percent-encoding = "2.2.0"
regex = "1.6.0"

[profile.release]
# Optimize executable size
lto = true
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
#codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization (not worth it rn)
